smallscript/antlr/SmallScriptParser.py
# Generated from SmallScript.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SmallScriptParser ( Parser ):

    grammarFileName = "SmallScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'['", "']'", "')'", "'('", "'|'", "'.'", 
                     "';'", "<INVALID>", "'<'", "'>'", "'-'", "<INVALID>", 
                     "'^'", "':'", "':='", "'#'", "'$'", "'e'", "'0x'", 
                     "'#('", "'#{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "NUMEXP", "HEX_", "ST_INT", "ST_FLOAT", 
                      "P_START", "P_END", "STRING", "WS", "SPACES", "CR", 
                      "COMMENT", "HEREDOC", "BLK_START", "BLK_END", "CLOSE_PAREN", 
                      "OPEN_PAREN", "PIPE", "PERIOD", "SEMI", "BIN_OP", 
                      "LT", "GT", "MINUS", "IDENT", "CARROT", "COLON", "ASSIGN", 
                      "HASH", "DOLLAR", "EXP", "HEX", "LITARR_START", "DYNARR_START", 
                      "DYNARR_END", "DIGIT", "HEXDIGIT", "KEYWORD", "BLK_PARAM", 
                      "CHAR" ]

    RULE_smallscript = 0
    RULE_closure = 1
    RULE_blk = 2
    RULE_temps = 3
    RULE_tempvar = 4
    RULE_blkparamlst = 5
    RULE_blkparam = 6
    RULE_expr = 7
    RULE_exprs = 8
    RULE_exprlst = 9
    RULE_unaryhead = 10
    RULE_unarytail = 11
    RULE_unarymsg = 12
    RULE_unaryop = 13
    RULE_operand = 14
    RULE_kwhead = 15
    RULE_kwmsg = 16
    RULE_kwpair = 17
    RULE_ptkey = 18
    RULE_binhead = 19
    RULE_bintail = 20
    RULE_binmsg = 21
    RULE_binop = 22
    RULE_subexpr = 23
    RULE_chain = 24
    RULE_ptfin = 25
    RULE_msg = 26
    RULE_assign = 27
    RULE_literal = 28
    RULE_rtlit = 29
    RULE_dynarr = 30
    RULE_parselit = 31
    RULE_litarr = 32
    RULE_litarrcnt = 33
    RULE_keywords = 34
    RULE_symbol = 35
    RULE_baresym = 36
    RULE_char = 37
    RULE_string = 38
    RULE_primitive = 39
    RULE_primkey = 40
    RULE_var = 41
    RULE_ref = 42
    RULE_ws = 43
    RULE_num = 44
    RULE_ssFloat = 45
    RULE_ssHex = 46
    RULE_ssInt = 47

    ruleNames =  [ "smallscript", "closure", "blk", "temps", "tempvar", 
                   "blkparamlst", "blkparam", "expr", "exprs", "exprlst", 
                   "unaryhead", "unarytail", "unarymsg", "unaryop", "operand", 
                   "kwhead", "kwmsg", "kwpair", "ptkey", "binhead", "bintail", 
                   "binmsg", "binop", "subexpr", "chain", "ptfin", "msg", 
                   "assign", "literal", "rtlit", "dynarr", "parselit", "litarr", 
                   "litarrcnt", "keywords", "symbol", "baresym", "char", 
                   "string", "primitive", "primkey", "var", "ref", "ws", 
                   "num", "ssFloat", "ssHex", "ssInt" ]

    EOF = Token.EOF
    NUMEXP=1
    HEX_=2
    ST_INT=3
    ST_FLOAT=4
    P_START=5
    P_END=6
    STRING=7
    WS=8
    SPACES=9
    CR=10
    COMMENT=11
    HEREDOC=12
    BLK_START=13
    BLK_END=14
    CLOSE_PAREN=15
    OPEN_PAREN=16
    PIPE=17
    PERIOD=18
    SEMI=19
    BIN_OP=20
    LT=21
    GT=22
    MINUS=23
    IDENT=24
    CARROT=25
    COLON=26
    ASSIGN=27
    HASH=28
    DOLLAR=29
    EXP=30
    HEX=31
    LITARR_START=32
    DYNARR_START=33
    DYNARR_END=34
    DIGIT=35
    HEXDIGIT=36
    KEYWORD=37
    BLK_PARAM=38
    CHAR=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SmallscriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def closure(self):
            return self.getTypedRuleContext(SmallScriptParser.ClosureContext,0)


        def EOF(self):
            return self.getToken(SmallScriptParser.EOF, 0)

        def getRuleIndex(self):
            return SmallScriptParser.RULE_smallscript

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSmallscript" ):
                listener.enterSmallscript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSmallscript" ):
                listener.exitSmallscript(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSmallscript" ):
                return visitor.visitSmallscript(self)
            else:
                return visitor.visitChildren(self)




    def smallscript(self):

        localctx = SmallScriptParser.SmallscriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_smallscript)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.closure()
            self.state = 97
            self.match(SmallScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClosureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprs(self):
            return self.getTypedRuleContext(SmallScriptParser.ExprsContext,0)


        def blkparamlst(self):
            return self.getTypedRuleContext(SmallScriptParser.BlkparamlstContext,0)


        def ws(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallScriptParser.WsContext)
            else:
                return self.getTypedRuleContext(SmallScriptParser.WsContext,i)


        def temps(self):
            return self.getTypedRuleContext(SmallScriptParser.TempsContext,0)


        def getRuleIndex(self):
            return SmallScriptParser.RULE_closure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClosure" ):
                listener.enterClosure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClosure" ):
                listener.exitClosure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClosure" ):
                return visitor.visitClosure(self)
            else:
                return visitor.visitChildren(self)




    def closure(self):

        localctx = SmallScriptParser.ClosureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_closure)
        self._la = 0 # Token type
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 99
                    self.blkparamlst()


                self.state = 103
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 102
                    self.ws()


                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==17:
                    self.state = 105
                    self.temps()


                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8 or _la==11:
                    self.state = 108
                    self.ws()


                self.state = 111
                self.exprs()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 112
                    self.blkparamlst()


                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8 or _la==11:
                    self.state = 115
                    self.ws()


                self.state = 118
                self.exprs()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BLK_START(self):
            return self.getToken(SmallScriptParser.BLK_START, 0)

        def BLK_END(self):
            return self.getToken(SmallScriptParser.BLK_END, 0)

        def ws(self):
            return self.getTypedRuleContext(SmallScriptParser.WsContext,0)


        def closure(self):
            return self.getTypedRuleContext(SmallScriptParser.ClosureContext,0)


        def getRuleIndex(self):
            return SmallScriptParser.RULE_blk

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlk" ):
                listener.enterBlk(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlk" ):
                listener.exitBlk(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlk" ):
                return visitor.visitBlk(self)
            else:
                return visitor.visitChildren(self)




    def blk(self):

        localctx = SmallScriptParser.BlkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_blk)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(SmallScriptParser.BLK_START)
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 122
                self.ws()


            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 837804046782) != 0):
                self.state = 125
                self.closure()


            self.state = 128
            self.match(SmallScriptParser.BLK_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TempsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(SmallScriptParser.PIPE)
            else:
                return self.getToken(SmallScriptParser.PIPE, i)

        def tempvar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallScriptParser.TempvarContext)
            else:
                return self.getTypedRuleContext(SmallScriptParser.TempvarContext,i)


        def ws(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallScriptParser.WsContext)
            else:
                return self.getTypedRuleContext(SmallScriptParser.WsContext,i)


        def getRuleIndex(self):
            return SmallScriptParser.RULE_temps

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemps" ):
                listener.enterTemps(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemps" ):
                listener.exitTemps(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemps" ):
                return visitor.visitTemps(self)
            else:
                return visitor.visitChildren(self)




    def temps(self):

        localctx = SmallScriptParser.TempsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_temps)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(SmallScriptParser.PIPE)
            self.state = 135 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 132
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==8 or _la==11:
                        self.state = 131
                        self.ws()


                    self.state = 134
                    self.tempvar()

                else:
                    raise NoViableAltException(self)
                self.state = 137 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8 or _la==11:
                self.state = 139
                self.ws()


            self.state = 142
            self.match(SmallScriptParser.PIPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TempvarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(SmallScriptParser.IDENT, 0)

        def getRuleIndex(self):
            return SmallScriptParser.RULE_tempvar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTempvar" ):
                listener.enterTempvar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTempvar" ):
                listener.exitTempvar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTempvar" ):
                return visitor.visitTempvar(self)
            else:
                return visitor.visitChildren(self)




    def tempvar(self):

        localctx = SmallScriptParser.TempvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tempvar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(SmallScriptParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlkparamlstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PIPE(self):
            return self.getToken(SmallScriptParser.PIPE, 0)

        def blkparam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallScriptParser.BlkparamContext)
            else:
                return self.getTypedRuleContext(SmallScriptParser.BlkparamContext,i)


        def ws(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallScriptParser.WsContext)
            else:
                return self.getTypedRuleContext(SmallScriptParser.WsContext,i)


        def getRuleIndex(self):
            return SmallScriptParser.RULE_blkparamlst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlkparamlst" ):
                listener.enterBlkparamlst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlkparamlst" ):
                listener.exitBlkparamlst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlkparamlst" ):
                return visitor.visitBlkparamlst(self)
            else:
                return visitor.visitChildren(self)




    def blkparamlst(self):

        localctx = SmallScriptParser.BlkparamlstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_blkparamlst)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 147
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==8 or _la==11:
                        self.state = 146
                        self.ws()


                    self.state = 149
                    self.blkparam()

                else:
                    raise NoViableAltException(self)
                self.state = 152 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8 or _la==11:
                self.state = 154
                self.ws()


            self.state = 157
            self.match(SmallScriptParser.PIPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlkparamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BLK_PARAM(self):
            return self.getToken(SmallScriptParser.BLK_PARAM, 0)

        def getRuleIndex(self):
            return SmallScriptParser.RULE_blkparam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlkparam" ):
                listener.enterBlkparam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlkparam" ):
                listener.exitBlkparam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlkparam" ):
                return visitor.visitBlkparam(self)
            else:
                return visitor.visitChildren(self)




    def blkparam(self):

        localctx = SmallScriptParser.BlkparamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_blkparam)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(SmallScriptParser.BLK_PARAM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(SmallScriptParser.AssignContext,0)


        def chain(self):
            return self.getTypedRuleContext(SmallScriptParser.ChainContext,0)


        def kwhead(self):
            return self.getTypedRuleContext(SmallScriptParser.KwheadContext,0)


        def binhead(self):
            return self.getTypedRuleContext(SmallScriptParser.BinheadContext,0)


        def primitive(self):
            return self.getTypedRuleContext(SmallScriptParser.PrimitiveContext,0)


        def getRuleIndex(self):
            return SmallScriptParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = SmallScriptParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expr)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.chain()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.kwhead()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 164
                self.binhead()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 165
                self.primitive()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SmallScriptParser.ExprContext,0)


        def exprlst(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallScriptParser.ExprlstContext)
            else:
                return self.getTypedRuleContext(SmallScriptParser.ExprlstContext,i)


        def ws(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallScriptParser.WsContext)
            else:
                return self.getTypedRuleContext(SmallScriptParser.WsContext,i)


        def SEMI(self):
            return self.getToken(SmallScriptParser.SEMI, 0)

        def getRuleIndex(self):
            return SmallScriptParser.RULE_exprs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprs" ):
                listener.enterExprs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprs" ):
                listener.exitExprs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprs" ):
                return visitor.visitExprs(self)
            else:
                return visitor.visitChildren(self)




    def exprs(self):

        localctx = SmallScriptParser.ExprsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exprs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.expr()
            self.state = 172
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 169
                    self.exprlst() 
                self.state = 174
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

            self.state = 176
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 175
                self.ws()


            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 178
                self.match(SmallScriptParser.SEMI)


            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8 or _la==11:
                self.state = 181
                self.ws()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SmallScriptParser.ExprContext,0)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(SmallScriptParser.SEMI)
            else:
                return self.getToken(SmallScriptParser.SEMI, i)

        def ws(self):
            return self.getTypedRuleContext(SmallScriptParser.WsContext,0)


        def getRuleIndex(self):
            return SmallScriptParser.RULE_exprlst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprlst" ):
                listener.enterExprlst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprlst" ):
                listener.exitExprlst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprlst" ):
                return visitor.visitExprlst(self)
            else:
                return visitor.visitChildren(self)




    def exprlst(self):

        localctx = SmallScriptParser.ExprlstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_exprlst)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 184
                self.match(SmallScriptParser.SEMI)
                self.state = 187 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==19):
                    break

            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8 or _la==11:
                self.state = 189
                self.ws()


            self.state = 192
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryheadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operand(self):
            return self.getTypedRuleContext(SmallScriptParser.OperandContext,0)


        def ws(self):
            return self.getTypedRuleContext(SmallScriptParser.WsContext,0)


        def unarytail(self):
            return self.getTypedRuleContext(SmallScriptParser.UnarytailContext,0)


        def getRuleIndex(self):
            return SmallScriptParser.RULE_unaryhead

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryhead" ):
                listener.enterUnaryhead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryhead" ):
                listener.exitUnaryhead(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryhead" ):
                return visitor.visitUnaryhead(self)
            else:
                return visitor.visitChildren(self)




    def unaryhead(self):

        localctx = SmallScriptParser.UnaryheadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_unaryhead)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.operand()
            self.state = 196
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
            if la_ == 1:
                self.state = 195
                self.ws()


            self.state = 199
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
            if la_ == 1:
                self.state = 198
                self.unarytail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnarytailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unarymsg(self):
            return self.getTypedRuleContext(SmallScriptParser.UnarymsgContext,0)


        def ws(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallScriptParser.WsContext)
            else:
                return self.getTypedRuleContext(SmallScriptParser.WsContext,i)


        def unarytail(self):
            return self.getTypedRuleContext(SmallScriptParser.UnarytailContext,0)


        def getRuleIndex(self):
            return SmallScriptParser.RULE_unarytail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnarytail" ):
                listener.enterUnarytail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnarytail" ):
                listener.exitUnarytail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnarytail" ):
                return visitor.visitUnarytail(self)
            else:
                return visitor.visitChildren(self)




    def unarytail(self):
